test/types/partial/default-init-generic2.good
default-init-generic2.chpl:12: In function 'main':
default-init-generic2.chpl:13: error: unable to resolve type 'R(type real(64))'
default-init-generic2.chpl:13: note: could not resolve default value for field 'n'
